# glasgow2024

./: .copier-answers.yml  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
docker/: entrypoint.sh
glasgow_2024/: asgi.py  settings.py  urls.py  wsgi.py
glasgow_2024_app/: apps.py  convention.py  urls.py
glasgow_2024_app/templates/nominate/bits/: nomination_instructions.html
