[project]
name = "glasgow-2024"
version = "1.0.0"
description = "Convention app for Glasgow 2024"
authors = []
dependencies = [
  # pin this forever; this is the frozen-in-amber nomnom release for Glasgow
  "nomnom-hugoawards==2024.1.0",
  "gunicorn[eventlet]>=21.2.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.ruff.lint.isort]
known-first-party = ["glasgow_2024", "glasgow_2024_app"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
